dapr-distributed-calendar/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller-ingress
  namespace: 12-factor-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /controller
            backend:
              service:
                name: controller
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapr-aws-ingress
  namespace: dapr-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /dapr
            backend:
              service:
                name: dapr-dashboard
                port:
                  number: 8080
